--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
 
-        <!-- build:js scripts/vendor.js -->
+        <!-- build:js scripts/lib/require.js -->
         <!-- bower:js -->
         <script data-main="scripts/config" src="bower_components/requirejs/require.js"></script>
         <!-- endbower -->
